# ezmips-2.0

./: .gitignore  README.md  ezmips.cabal
app/: Main.hs
src/: Main.hs
src/Lexer/: Token.hs  Token.x
src/Parser/: AST.hs  Grammar.hs  Grammar.y
src/TypeCheck/: Infer.hs
