name:                ezmips
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/ezmips#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/Lexer/Token.x
                   , src/Parser/Grammar.y

executable ezmips
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , optparse-applicative
                     , microlens-platform
                     , bytestring
                     , array
                     , string-conv
                     , recursion-schemes
                     , ezmips
                     , containers
                     , mtl

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lexer.Token
                     , Parser.Grammar
                     , Parser.AST
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , optparse-applicative
                     , microlens-platform
                     , array
                     , recursion-schemes
                     , bytestring
                     , string-conv
                     , free
                     , containers
                     , mtl        
                                                                   
